--- a/CSS/main.css
+++ b/CSS/main.css
@@ -36,7 +36,8 @@ q:before, q:after {content:'';}
     background-position: center;
     padding-top: 1px;
     margin-bottom: -20px;
-    min-height: 550px;    
+    min-height: 550px; 
+    height: 100%;   
 }
 
 #div_about{
@@ -50,6 +51,10 @@ q:before, q:after {content:'';}
     padding-top: 1px;
     margin-bottom: -20px;
     min-height: 550px;
+}
+
+#img_about{
+    padding-left: 15rem;
 }
 
 #nav_ind a{
@@ -73,7 +78,7 @@ q:before, q:after {content:'';}
 }
 
 main h1{
-    color:gold;
+    color: white;
     font-size: 35px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
@@ -115,18 +120,89 @@ main p{
     margin-left: 10px;  
 }
 
+
+
 label{
     color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    display: block;
+    align-items: center;
+    font-size: 1.125rem;
+    margin-bottom: 0.5rem;
+}
+
+
+form{
+    padding: 2.5rem;    
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
 }
 
 #form{
-    margin-left: 250px;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    background-color:  rgba(28, 25, 25, 0.525);
 }
 
+.form-group {
+    margin: 0 auto 1.25rem auto;
+    padding: 0.25rem;
+  }
+
+
+input{
+    background-color:  rgba(28, 25, 25, 0.96);
+    position: relative;    
+}
+
+.input-textarea {
+    min-height: 120px;    
+    padding: 0.625rem;
+    resize: vertical;
+  }
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 2rem;
+    padding: 0.375rem 0.75rem;
+    color: white;    
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }  
+
+.input-textarea {
+    min-height: 120px;
+    width: 100%;
+    padding: 0.625rem;
+    resize: vertical;
+    background-color:  rgba(28, 25, 25, 0.96);
+    border: 1px solid #ced4da;
+  }  
+
+.submit-button {
+    display: block;
+    width: 100%;
+    padding: 0.75rem;
+    background: inherit;
+    color:  white;
+    border-radius: 2px;
+    cursor: pointer;
+    margin-left: 8px;
+    
+}
+  
+
+
 footer{
-    background-color: rgba(28, 25, 25, 0.96);
-    padding-top: 25px;
+    background-color: rgba(28, 25, 25, 0.96);    
     color: gray;
 }
 
@@ -137,36 +213,34 @@ footer a{
 
 footer h3{
     text-align: left;
-    margin-left: 20px;
-    color: gold;
+    
+    color: rgb(255, 255, 255);
 }
 
 footer div{
     text-align: left;
-    margin-left: 20px;
+    margin-left: 0px;
 }
 #footer_ind{
     text-align: center;
-    padding-top: 15px;
+    padding-top: 0px;
 }
 
 #footer_about{
     text-align: center;
-    padding-top: 15px;
+    padding-top: 0px;
 }
 
-#img_about{
-    padding-left: 10px;
-}
+
 
 #footer_form{
     text-align: center;
-    padding-top: 15px;
+    padding-top: 0px;
 }
 
 footer p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 15px;
+    padding: 0px;
 }
 
 #iframe{
