--- a/CSS/main.css
+++ b/CSS/main.css
@@ -23,6 +23,11 @@ q:before, q:after {content:'';}
     font-weight: normal;
     font-style: normal;
 }*/
+
+body{
+    margin: 0px;
+}
+
 #div_ind{
     /*background-image: url(../imagenes/tablerohd3.jpg);*/
     /*background: var(--color-black);*/
@@ -220,6 +225,11 @@ footer div{
     text-align: left;
     margin-left: 0px;
 }
+
+.divFooter {
+    text-align: left;
+    padding: 20px;
+}
 #footer_ind{
     text-align: center;
     padding-top: 0px;
@@ -239,9 +249,16 @@ footer div{
 
 footer p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 0px;
+    padding: 20px;
 }
 
 #iframe{
    padding-left: 585px;
+}
+
+section {
+    text-align: right;
+    padding: 20px;
+    
+    
 }
