--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,29 +1,65 @@
-.container {
-    display: flex;
-    justify-content: center;
-    margin-top: 5px;
+.contenedor {
+	width: 100%;
+	max-width: 1200px;
+	margin: auto;
+	padding: 40px 0;
+    
+
+	/* Flexbox */
+	/* display: flex;
+	gap: 20px; */
+
+	/* Grid */
+	display: grid;
+	grid-template-columns: 3fr;
+	gap: 20px;
 }
 
-.imagen {
-    width: 200px;
-    height: 200px;
-    margin: 0 3px;
-    border-radius: 10px;    
+.contenedor-conciertos {
+	/* Flexbox */
+	/* width: 70%;
+
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px; */
+
+	/* Grid */
+	display: grid;
+	grid-template-columns: repeat(3,1fr);
+	gap: 20px;
 }
 
 .card {
-    text-align: center;
+	border-radius: 10px;
+	min-height: 200px;
+	font-weight: bold;
+	padding: 20px;
+	position: relative;
+	overflow: hidden;
+	background-size: cover;
+	background-position: center center;
+
+	/* Flexbox */
+	/* width: calc(33.33% - 20px); */
 }
 
-.card p {
-    font-size: 13px;
-    background-color: red;
-    text-align: center;
-    border-radius: 10px;
-    padding: 3px;
-    text-transform: uppercase;
+.textos {
+	width: auto;
+    height: auto;    
+    
 
+    
+	
+	/* Flebox
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;*/
+
+	/* Grid 
+	display: grid;
+	grid-template-rows: 1fr auto;*/
 }
+
 
 .logo{
     background-color: rgb(33, 32, 32);
@@ -48,4 +84,24 @@
     100%{
         transform: translateY(0px);
     }
+}
+
+@media screen and (max-width: 900px) {
+	
+}
+
+@media screen and (max-width: 700px) {
+	.contenedor-conciertos {
+	
+		/* Grid */
+		grid-template-columns: repeat(2, 1fr);
+		gap: 10px;
+	}
+	.banner{
+		display: none;
+	}
+}
+
+@media screen and (max-width: 600px) {
+
 }
