--- a/CSS/PruebasResponsiveCss/NavResponsive.css
+++ b/CSS/PruebasResponsiveCss/NavResponsive.css
@@ -1,3 +1,8 @@
 /*
 Esta es una prueba de un branch nuevo para hacer el nav responsive.
+https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_topnav
+
+este es el ejemplo para lo que quiere lograra de ocultar todos los botones en un solo menu
+
 */
+
