--- a/CSS/main.css
+++ b/CSS/main.css
@@ -14,18 +14,10 @@ ul {padding-left: 1.4em;list-style: aquare;}
 q:before, q:after {content:'';}
 /* fin css reset */
 
-/*@font-face {
-    font-family: 'AlphaWomanHair';
-    src:url('AlphaWomanHair.ttf.woff') format('woff'),
-        url('AlphaWomanHair.ttf.svg#AlphaWomanHair') format('svg'),
-        url('AlphaWomanHair.ttf.eot'),
-        url('AlphaWomanHair.ttf.eot?#iefix') format('embedded-opentype'); 
-    font-weight: normal;
-    font-style: normal;
-}*/
 
-body{
-    margin: 0px;
+*{
+    margin:0;
+    padding: 0;
 }
 
 #div_ind{
@@ -40,8 +32,10 @@ body{
     background-position: center;
     padding-top: 1px;
     margin-bottom: -20px;
-    min-height: 550px; 
-    height: 100%;   
+    min-height: 450px;
+    width: 100%; 
+    height: 100%;
+       
 }
 
 #div_about{
@@ -61,24 +55,56 @@ body{
     padding-left: 50px;
 }
 
-#nav_ind a{
-    background-color: black;
-    color: gray;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    padding: 5px;
-    border-radius: 5px;
-}
-
 #nav_ind{
-    background-color: rgba(28, 25, 25, 0.96);
+    background-color: rgba(11, 9, 9, 0.96);
     padding-bottom: 25px;
     padding-top: 25px;
     text-align: center;
+    
 }
 
-.nav{
-    margin-right: 15px;
+#nav_ind a{
+    display: inline;
+    width: 200px;
+    border: 1px solid gray;
+    border-radius: 6px;
+    text-decoration: none;
+    color: gray;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 6px 10px;
+    margin-top: 10px;
+    text-align: center;
+    position: relative;
+    transition: color .4s;
+    
+    
+}
+
+#nav_ind a:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    background-color:rgb(3, 237, 226);
+    z-index: -1;
+
+    left: 100%;
+    width: 0%;
+    transition: .5s;
+}
+
+#nav_ind a:hover{
+    color: red
+  
+}
+
+#nav_ind a:hover:before{
+    left: 0%;
+    width: 100%;
+    transition: width .5s;
+    
+    
+
 }
 
 main h1{
@@ -86,6 +112,7 @@ main h1{
     font-size: 35px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    margin-top: 100px;
     padding-top: 20px;
 }
 
@@ -103,6 +130,10 @@ main h4{
     font-family: Arial, Helvetica, sans-serif;
     text-align: right;
     margin-right: 10px;
+}
+
+#video{
+    margin-top: 10px;
 }
 
 #h3_serv{
@@ -208,17 +239,24 @@ input{
 footer{
     background-color: rgba(28, 25, 25, 0.96);    
     color: gray;
+    width: 100%;
+    max-height: none;
 }
 
 footer a{
-    font-size: 30px;
+    font-size: 25px;
     margin-right: 10px;
+    
 }
 
-footer h3{
-    text-align: left;
-    
+footer h4{
+    text-align: center;
     color: rgb(255, 255, 255);
+    padding: 10px;
+}
+
+.redsoc:hover{
+    color: red
 }
 
 footer div{
@@ -226,9 +264,18 @@ footer div{
     margin-left: 0px;
 }
 
+footer h5{
+    text-align: center;
+    padding-left: 1px;
+    padding-right: 1px;
+    
+    
+}
+
 .divFooter {
-    text-align: left;
-    padding: 20px;
+    text-align: center;
+    margin-left: 10px;
+    padding: 5px;
 }
 #footer_ind{
     text-align: center;
@@ -249,16 +296,14 @@ footer div{
 
 footer p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 20px;
+    padding: 5px;
 }
 
 #iframe{
-   padding-left: 585px;
+   padding: 10px;
 }
 
-section {
-    text-align: right;
-    padding: 20px;
-    
-    
+#ubicenter{
+    text-align: center;
 }
+
