--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,15 +44,21 @@
 }
 
 #textos {
-	color: rgb(146, 145, 145);
+	color: white;
 	background-color: red;
 	text-align: center;
 	margin-top: 50%;
-	background-image: linear-gradient(
+	/*background-image: linear-gradient(
 		115deg,
 		rgba(11, 11, 11, 0.984),
 		rgba(34, 34, 38, 0.766)
+	  ), url(../imagenes/tablerohd3.jpg);*/
+	  background-image: linear-gradient(
+		115deg,
+		rgba(11, 11, 11, 0.584),
+		rgba(34, 34, 38, 0.648)
 	  ), url(../imagenes/tablerohd3.jpg);
+	opacity: 0.8;
 	
 	
 	  
@@ -66,6 +72,18 @@
 	grid-template-rows: 1fr auto;*/
 }
 
+#textos:hover{
+	background-image: linear-gradient(
+		115deg,
+		rgba(11, 11, 11, 0.984),
+		rgba(34, 34, 38, 0.766)
+	  ), url(../imagenes/tablerohd3.jpg);
+}
+
+.pServicio{
+	opacity:1.0;
+	color: white;
+}
 
 .logo{
     background-color: rgb(33, 32, 32);
