--- a/CSS/style.css
+++ b/CSS/style.css
@@ -110,7 +110,7 @@
     }
 }
 
-@media screen and (max-width: 1266px) {
+/* @media screen and (max-width: 1266px) {
 	
 }
 
@@ -118,11 +118,11 @@
 	.contenedor-conciertos {
 	
 		/* Grid */
-		grid-template-columns: repeat(2, 1fr);
+		/*grid-template-columns: repeat(2, 1fr);
 		gap: 10px;
 	}
-	.nav{
-		/* Flebox*/
+	/*.nav{
+		 Flebox
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
@@ -131,12 +131,12 @@
 		/* Grid 
 		display: grid;
 		grid-template-rows: 4fr auto;*/
-	}
-	.banner{
+	/*}
+	/*.banner{
 		display: none;
 	}
 }
 
 @media screen and (max-width: 360px) {
 
-}
+} */
