--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,8 +44,8 @@
 }
 
 #textos {
-	color: white;
-	background-color: red;
+	/* color: white; */
+	/* background-color: red; */
 	text-align: center;
 	margin-top: 50%;
 	/*background-image: linear-gradient(
