--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -3,6 +3,18 @@
     padding: 0;
 }
 
+main h1 {
+
+    margin-top: 30px;
+}
+
+#video {
+
+    margin-bottom: 20px;
+}
+
+
+
 p.pServicio{
     font-size:28px;
     color: whitesmoke;
