--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -33,3 +33,8 @@ p.pServicio{
 	grid-template-columns: repeat(1,1fr);
 	gap: 10px;
 }
+
+#form {
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
