--- a/CSS/main.css
+++ b/CSS/main.css
@@ -226,7 +226,15 @@ input{
     background-color:  rgba(28, 25, 25, 0.96);
     color: white;
     border: 1px solid #ced4da;
-  }  
+  }
+  
+.warnings{
+    width: 200px;
+    text-align: center;
+    margin: auto;
+    color: brown;
+    padding-top: 20px;
+}  
 
 .submit-button {
     display: block;
